XP-2949 Scrollbar is not shown in the Enonic Market dialog when there are too many apps * Fixed vertical scrollbar in the list of Market apps * Fixed infinite refresh of the grid * Fixed responsive height of the dialog * Removed redundant centering of the dialog * Swapped the Market/Upload tabs

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/dialog/modal-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/dialog/modal-dialog.less
@@ -22,14 +22,6 @@
     height: 3em;
   }
 
-  @media screen and (max-height: 360px) {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-top: 20px;
-    padding-bottom: 10px;
-    height: 92%;
-  }
-
   .dialog-header {
     .clearfix();
     margin-bottom: 20px;
